Final bits before submission

--- a/Conclusion/Conclusion.tex
+++ b/Conclusion/Conclusion.tex
@@ -26,12 +26,15 @@ data recorded during the first half of the 2016 data-taking period. The
 branching ratio of heavy neutral Higgs bosons into di-tau pairs is enhanced at high \tanb~in the \ac{MSSM},
 making this one of the most sensitive search channels for such particles. Both analyses use a categorisation 
 based on the presence of b-tagged jets to separate
-the gluon fusion and b-associated production modes of Higgs bosons in the \ac{MSSM}. 
+the gluon fusion and b-associated Higgs boson production modes in the \ac{MSSM}. 
 The hadronic tau isolation working point and the topological selection on 
-the \mT~variable are chosen to optimise the search sensitivity for signal
+the transverse mass between the electron or muon and the missing transverse energy are chosen to optimise the search sensitivity for signal
 masses of around $1\,\TeV$.
-The sensitivity is maximised by using the \mTtot~variable for signal extraction.
-This variable separates the dominant backgrounds
+The sensitivity is maximised by using the total transverse mass for signal extraction. This variable, which is 
+the combination of the transverse
+mass between the two legs of the di-tau candidate and the transverse masses between each of the legs
+of the di-tau candidate and the missing transverse energy,
+separates the dominant backgrounds
 and the high-mass signal well.
 No significant excess is observed in these searches, and so 
 these analyses set limits on the production cross section times branching ratio of both the
@@ -40,7 +43,7 @@ interpreted in \ac{MSSM} benchmark scenarios, where the analyses exclude large a
 of the \mA-\tanb~plane, with significant improvement with respect to the most sensitive
 results obtained in Run 1 \cite{CMS-PAS-HIG-16-006,CMS-PAS-HIG-16-037}. A combination of the 2015 and 2016 analyses is also
 performed. This combination improves on the results of the 2016 analysis alone, thus
-setting the most stringent limits on $\PHiggsps/\PHiggs$ to date.
+setting the most stringent limits on $\PHiggsps/\PHiggs$ production to date.
 
 As more data are collected during the remainder of Run 2, and in the 
 future, searches for \ac{MSSM} Higgs bosons in the di-tau final
@@ -52,7 +55,7 @@ analysis to integrated luminosities of $300\,\invfb$ and $3000\,\invfb$ \cite{HT
 shown in figure \ref{fig:mssm_projection_fig}. Even with an integrated luminosity of
 $3000\,\invfb$ it is not possible to exclude the full \mA-\tanb~plane of this scenario,
 as the branching ratio of $\PHiggsps/\PHiggs$ into di-tau pairs 
-is very low in the high-\mA~and low-tanb~corner. This region can be accessed 
+is very low in the high-\mA~and low-\tanb~corner. This region can be accessed 
 via searches for the $\PHiggsps/\PHiggs \rightarrow \Ptop\APtop$ decay, which
 has an enhanced branching ratio in this region. To fully cover this
 parameter space it will therefore start to become more and more
@@ -66,12 +69,16 @@ of the scenarios that predict them.
 \includegraphics[width=0.7\textwidth]{./Conclusion/Figures/scenario_comp2.pdf}
 \end{center}
 \caption[The expected exclusion in the $m_{\PHiggslight}^{\text{mod+}}$ scenario
-at the 95\% CL of the 2015 MSSM analysis, projected to an integrated luminosity of $300$ and $3000\,\invfb$.]{The expected exclusion in the $m_{\PHiggslight}^{\text{mod+}}$ scenario
+at the 95\% CL of the 2015 MSSM analysis, projected to integrated luminosities of $300$ and $3000\,\invfb$.]{The expected exclusion in the $m_{\PHiggslight}^{\text{mod+}}$ scenario
  at the 95\% CL of the 2015 MSSM analysis (pink)
 projected to integrated luminosities of $300\,\invfb$ (blue) and $3000\,\invfb$ (red)
-under several assumptions of how the systematic uncertainties scale. Even with an integrated 
+under several assumptions of how the systematic uncertainties scale. In scenario ``S1''
+all systematic uncertainties are kept constant with integrated luminosity, while in scenario ``S2'' 
+the theoretial uncertainties are scaled down by a factor $\frac{1}{2}$ and experimental
+systematic uncertainties scale down by the square root of the integrated luminosity until they reach
+a lower limit. In the ``Stat. Only'' scenario all systematic uncertainties are neglected. Even with an integrated 
 luminosity of $3000\,\invfb$ it is not possible to exclude the entire \mA-\tanb~plane
-in this \ac{MSSM} benchmark scenario \cite{HTT-projection}.}
+in this \ac{MSSM} benchmark scenario using this analysis alone \cite{HTT-projection}.}
 \label{fig:mssm_projection_fig}
 \end{figure}
 
