--- a/Detector/Detector.tex
+++ b/Detector/Detector.tex
@@ -85,7 +85,8 @@ by running year \cite{cms-lumi-public}.}
 The data-taking efficiency of CMS is not 100\%, as parts of the detector might be
 switched off while collisions are ongoing. In 2012 the data-taking 
 efficiency was 93.5\%, in 2015 it was 90.3\% and in 2016 it was 92.0\%.
-From all of the data that is recorded only a subset is used for analysis. Data is 
+Only a subset of the recorded data is used for analysis.
+Data are
 certified as good for use in analyses if it is known that all relevant sub-detectors
 were functioning correctly. In 2012 the certification efficiency was 90.4\%, 
 meaning all sub-detectors were working well for a dataset corresponding to $19.7\,\invfb$. %MAYBE COME BACK TO LATER?
@@ -270,7 +271,7 @@ crystals of $0.0174 \times 0.0174$ in $\eta$-$\phi$. The \acp{EE}
 provide coverage beyond the range of the \ac{EB}, up to $|\eta|<3.0$.
 Each endcap is divided into two halves. The preshower detectors, 
 which are sampling calorimeters placed in front of the endcaps, cover a range of $1.653<|\eta|<2.6$.
-The main use of the preshower detectors is to identifiy neutral pions decaying to two photons in the 
+The main use of the preshower detectors is to identify neutral pions decaying to two photons in the 
 endcaps. Additionally,
 they aid in the identification of electrons and improve the resolution
 of the position determination. Each of the two preshower detectors consists
