--- a/MSSM/UncOv.tex
+++ b/MSSM/UncOv.tex
@@ -1,6 +1,6 @@
 \begin{table}[!h]
 \begin{center}
-\caption[Systematic uncertainties that affect the estimated number of signal or background events in the \mutau channel]{\footnotesize Systematic uncertainties that affect the estimated number of signal
+\caption[Systematic uncertainties that affect the estimated number of signal or background events in the \mutau channel.]{\footnotesize Systematic uncertainties that affect the estimated number of signal
 or background events in the \mutau channel.} 
  {\tiny
  \begin{tabular}{p{2cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{3cm}}
