--- a/Theory/Theory.tex
+++ b/Theory/Theory.tex
@@ -117,9 +117,9 @@ neutral currents.
 %s\\
 %b \end{pmatrix}.
 %\end{equation}
-The SU(2) part of the symmetry is built from the weak
+The SU(2)$_{\text{L}}$ part of the symmetry is built from the weak
 isospin generators \mbox{$I_{1,2,3} = \frac{1}{2}\sigma_{1,2,3}$},
-where $\sigma_i$ are the Pauli spin matrices. The U(1)
+where $\sigma_i$ are the Pauli spin matrices. The U(1)$_{\text{Y}}$
 symmetry comes from the weak hypercharge generator $Y$, which
 is related to weak isospin and electric charge as
 \begin{equation}\label{eqn:hypercharge}
@@ -311,7 +311,7 @@ significances of $4.5\sigma$ \cite{ATLAS-tautau} and $3.2\sigma$ \cite{SMHtautau
 \subfloat[W/Z associated production]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/feynman_VH.pdf}}
 \subfloat[\ttbar associated production]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/feynman_ttH.pdf}}
 \end{center}
-\caption[Tree-level Feynman diagrams for the dominant Higgs boson production modes at the LHC]{Tree-level Feynman diagrams for the dominant Higgs boson production modes at
+\caption[Tree-level Feynman diagrams for the dominant Higgs boson production modes at the LHC.]{Tree-level Feynman diagrams for the dominant Higgs boson production modes at
 the \ac{LHC}.}
 \label{fig:theory_smhprod}
 \end{figure}
@@ -329,7 +329,7 @@ of the \ac{SM} background.
 \subfloat[\ac{SM} Higgs boson production cross sections]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/plot_13tev_H_sqrt.pdf}}
 \subfloat[\ac{SM} Higgs boson branching ratios]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/SMHiggsBRYR4-square.pdf}}
 \end{center}
-\caption[SM Higgs boson production cross sections at $\sqrt{s}=13\,\TeV$ and SM Higgs boson branching ratios, for Higgs boson masses between $120$ and $130\,\GeV$]{(a) \ac{SM} Higgs boson production cross sections at $\sqrt{s} = 13\,\TeV$ and (b) \ac{SM}
+\caption[SM Higgs boson production cross sections at $\sqrt{s}=13\,\TeV$ and SM Higgs boson branching ratios, for Higgs boson masses between $120$ and $130\,\GeV$.]{(a) \ac{SM} Higgs boson production cross sections at $\sqrt{s} = 13\,\TeV$ and (b) \ac{SM}
 Higgs boson branching ratios, for Higgs boson masses between $120$ and $130\,\GeV$ \cite{YR4}.}
 \label{fig:theory_smhxsbr}
 \end{figure}
@@ -549,7 +549,7 @@ The branching ratio into di-tau pairs is large for \tanb~$= 30$. The branching r
 \subfloat[\tanb=5]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/YR4HXS_BRSummary_H_mhmodp_tanbeta5_FeynHiggs_HDecay.pdf}}
 \subfloat[\tanb=30]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/YR4HXS_BRSummary_H_mhmodp_tanbeta30_FeynHiggs_HDecay.pdf}}
 \end{center}
-\caption[Branching ratios of the \PHiggs boson in the $m_{\PHiggslight}^{\text{mod+}}$ scenario]{Branching ratios of the \PHiggs boson in the $m_{\PHiggslight}^{\text{mod+}}$ scenario,
+\caption[Branching ratios of the \PHiggs boson in the $m_{\PHiggslight}^{\text{mod+}}$ scenario.]{Branching ratios of the \PHiggs boson in the $m_{\PHiggslight}^{\text{mod+}}$ scenario,
 at (a) \tanb=5~and (b) \tanb=30. The branching ratio into $\tau\tau$ (blue), $\Pbottom\APbottom$ (red) 
 and $\mu\mu$ (yellow) is enhanced at high \tanb, while the branching ratio into 
 WW (brown) and \ttbar (green) is reduced \cite{MSSM-xswg-twiki}.}
@@ -578,7 +578,7 @@ bottom quark fusion. The tree-level Feynman diagram for this process is shown in
 \subfloat[Gluon fusion production]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/CMS-PAS-HIG-16-037_Figure_001-a.pdf}}
 \subfloat[b-Associated production]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/CMS-PAS-HIG-16-037_Figure_001-b.pdf}}
 \end{center}
-\caption[Tree-level Feynman diagrams of gluon fusion and b-associated production of neutral Higgs bosons in the MSSM]{Tree-level Feynman diagrams of (a) gluon fusion production and (b) b-associated
+\caption[Tree-level Feynman diagrams of gluon fusion and b-associated production of neutral Higgs bosons in the MSSM.]{Tree-level Feynman diagrams of (a) gluon fusion production and (b) b-associated
 production of neutral Higgs bosons in the MSSM. The squarks in the gluon fusion production loop do not contribute to the production of the \PHiggsps boson.}
 \label{fig:production_mssm}
 \end{figure}
@@ -625,7 +625,7 @@ and decay are enhanced for $250\leq m_{\PHiggs}\leq 350\,\GeV$ and $220 \leq m_{
 \subfloat[\PHiggs boson]{\includegraphics[width=0.516\textwidth]{./Theory/Figures/typeII2HDMxsbr.png}}
 \subfloat[\PHiggsps boson]{\includegraphics[width=0.484\textwidth]{./Theory/Figures/typeII2HDMxsbrA.png}}
 \end{center}
-\caption[Inclusive production \xsbr for an example of a type-II 2HDM, for the \PHiggs and \PHiggsps boson.]{Inclusive production \xsbr for an example
+\caption[Inclusive production \xsbr for an example of a type-II 2HDM, for the \PHiggs and \PHiggsps bosons.]{Inclusive production \xsbr for an example
 of a type-II \ac{2HDM}, for (a) the \PHiggs boson and (b) the \PHiggsps boson. The
 top figures use \tanb=1 and $\cos{(\beta-\alpha)}=-0.11$, the bottom
 figures are made for \tanb=10 and $\cos{(\beta-\alpha)}=-0.02$. At low \tanb~the \Htohh and
@@ -716,8 +716,8 @@ is similar.
 
 \begin{figure}[h!]
 \begin{center}
-\subfloat[$\sigma(\Pg\Pg\rightarrow \PHiggs)$]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/xs_ggH_mhmodp.pdf}}
-\subfloat[$\sigma(\Pg\Pg\rightarrow \Pbottom\Pbottom\PHiggs)$]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/xsbbH4F_mhmodp.pdf}}
+\subfloat[$\sigma(\Pg\Pg\rightarrow \PHiggs)$ (pb)]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/xs_ggH_mhmodp.pdf}}
+\subfloat[$\sigma(\Pg\Pg\rightarrow \Pbottom\Pbottom\PHiggs)$ (pb)]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/xsbbH4F_mhmodp.pdf}}
 \end{center}
 \caption[Production cross sections of  gluon fusion and b-associated
 production of the \PHiggs boson in the $m_{\PHiggslight}^{\text{mod+}}$ scenario.]{Production cross section of (a) gluon fusion production and (b) b-associated production of the \PHiggs boson
@@ -774,7 +774,7 @@ if $M_{\text{SUSY}}$ is allowed to be greater than $3\,\TeV$ \cite{MSSM-reopen}.
 %\end{figure}
 %where the ±3 GeV variation corresponds to a rough estimate of the theoretical uncertainty of the MSSM prediction for mh, due to the unknown effect of higher-order correction
 
-Two approches for the definition of an \ac{MSSM} scenario that gives
+Two approaches for the definition of an \ac{MSSM} scenario that gives
 access to the low \tanb~region have been developed, they will be
 discussed in the next sections.
 
@@ -784,7 +784,7 @@ discussed in the next sections.
 \subfloat[Low-\tanb~scenario]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/mh_lowtbhigh.pdf}}
 \end{center}
 \caption[The mass of the light Higgs boson, \mh, as a function of \mA~and
-\tanb~in the $m_{\PHiggslight}^{\text{mod+}}$ scenario and the low-\tanb~scenario.]{The mass of the light Higgs boson, \mh, as a function 
+\tanb~in the $m_{\PHiggslight}^{\text{mod+}}$ scenario and the low-\tanb~scenario.]{The mass of the light Higgs boson, \mh, in $\GeV$ as a function 
 of \mA~and \tanb~in (a) the $m_{\PHiggslight}^{\text{mod+}}$ scenario and (b) the low-\tanb~scenario. The white areas
 indicate masses lower than $122\,\GeV$. The figures show that
 the mass of the light Higgs boson is compatible with $125\,\GeV$ over a large
@@ -886,7 +886,7 @@ gives enough information to determine the cross sections and branching
 ratios of all of the five Higgs bosons as a function of \mA~and \tanb. The scenario
 is only well defined in regions where the denominator in equations
 \ref{eqn:hmssm_deltam22} and \ref{eqn:hmssm_mHalpha}, $m_{\PZ}^2\text{cos}^2\beta+m_{\PHiggsps}^2\text{sin}^2\beta - m_{\PHiggslight}^2$, is non-zero. 
-This leads to a minimum accesible \mA~value of \mh~at high \tanb, and
+This leads to a minimum accessible \mA~value of \mh~at high \tanb, and
 a minimum accessible \mA~of around $151\,\GeV$ for \tanb=1. In addition, the scenario
 can be formulated, but is not strictly valid, for values of \tanb~upwards of ten \cite{CMS-PAS-HIG-16-007}.
 The reason for this is that direct higher order SUSY corrections to down-type
