--- a/backmatter.tex
+++ b/backmatter.tex
@@ -23,10 +23,10 @@
 \acro{CL}[CL]{confidence level}
 \acro{CMS}[CMS]{Compact Muon Solenoid}
 \acro{CSC}[CSC]{cathode strip chamber}
-\acro{CSV}[CSV]{combined secondary certex}
+\acro{CSV}[CSV]{combined secondary vertex}
 \acro{CTF}[CTF]{combinatorial track finder}
 \acro{DA}[DA]{deterministic annealing}
-\acro{DAQ}[DAQ]{aata acquisition}
+\acro{DAQ}[DAQ]{data acquisition}
 \acro{DT}[DT]{drift tube chamber}
 \acro{EB}[EB]{ECAL barrel}
 \acro{ECAL}[ECAL]{electromagnetic calorimeter}
@@ -37,11 +37,11 @@
 \acro{HCAL}[HCAL]{hadron calorimeter}
 \acro{HE}[HE]{hadron endcap calorimeter}
 \acro{HF}[HF]{hadron forward calorimeter}
-\acro{HLT}[HLT]{High-level trigger}
+\acro{HLT}[HLT]{high-level trigger}
 \acro{HO}[HO]{hadron outer calorimeter}
 \acro{IVF}[IVF]{inclusive vertex finder}
 \acro{KF}[KF]{Kalman filter}
-\acro{L1}[L1]{Level-1}
+\acro{L1}[L1]{level-1}
 \acro{LEP}[LEP]{Large Electron-Positron}
 \acro{LHC}[LHC]{Large Hadron Collider}
 \acro{LS1}[LS1]{Long Shutdown 1}
@@ -55,7 +55,7 @@
 \acro{QED}[QED]{quantum electrodynamics}
 \acro{QFT}[QFT]{quantum field theory}
 \acro{RF}[RF]{radio frequency}
-\acro{RPC}[RPC]{pesistive plate chamber}
+\acro{RPC}[RPC]{resistive plate chamber}
 \acro{SM}[SM]{standard model}
 \acro{SPS}[SPS]{Super Proton Synchrotron}
 \acro{SUSY}[SUSY]{supersymmetry}
