--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -41,7 +41,7 @@ a two Higgs doublet model.
 
 % Declaration
 \begin{declaration}
-  \vspace*{1cm}
+%  \vspace*{1cm}
   I declare that the work in this thesis is mine. Figures and results taken from other sources
 include the appropriate reference in the text or figure caption. Figures labelled `CMS' are sourced
 directly from CMS publications. The `CMS Preliminary' label indicates figures which
@@ -57,8 +57,8 @@ the interpretation of the results in MSSM and 2HDM benchmark scenarios. The
 work is included in reference \cite{CMS-HIG-14-034}. For the results presented in chapter~\ref{chap:mssm}
 I was responsible for all stages of the analysis, including the optimisation
 of object selection and event categorisation, as well as studies of background
-methods for three out of four channels in the public result of the analysis,
-evaluation of systematic uncertainties in all four channels, and production of the statistical
+methods for three out of four final states in the public result,
+evaluation of systematic uncertainties in all four final states, and production of the statistical
 results, including model interpretations. This work is included in the most recent
 preliminary result \cite{CMS-PAS-HIG-16-037}, as well as a predating preliminary
 result using a smaller dataset \cite{CMS-PAS-HIG-16-006}.
@@ -72,8 +72,29 @@ not been made public, and draws on the results of \cite{CMS-PAS-HIG-16-037} and 
 
 
 %% Acknowledgements
-%\begin{acknowledgements}
-%\end{acknowledgements}
+\begin{acknowledgements}
+I would like to thank Imperial College and the Imperial College HEP group 
+for giving me the opportunity to carry out this research, and especially
+for the valuable experience of spending two years at CERN. Thanks
+to my supervisors, David Colling for helping secure this funding and his support, and Gavin Davies
+for many useful discussions and general advice.
+The work in this thesis would not have come to fruition without Rebecca, who taught me 
+all the important aspects of doing an analysis as well as always being
+ready to discuss ideas, and I am very grateful to her for that. My thanks extend
+to Andrew in this regard, who was also always available to discuss physics and coding issues.
+I would also like to thank the people I've worked with in the CMS $\PHiggs\rightarrow\tau\tau$ group,
+particularly those involved in the most recent MSSM result. 
+
+Thanks to my friends, nearby and far away, for all of the good times and laughter.
+Most importantly, I would like to thank those closest to me for their love: My mother, who is always there
+for me despite the fact I live so far away; my father, whose love of science I inherited and who
+would certainly be a little bit jealous of the computing power I get to play with on a daily basis; my sister, 
+who always understands me as she's followed a similar path; and Andrew, for making the days so much brighter.
+
+\begin{flushright}
+Adinda de Wit
+\end{flushright}
+\end{acknowledgements}
 
 
 %% Preface
